[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/base_tank.gd" type="Script" id=1]
[ext_resource path="res://sprites/tank_shadow.png" type="Texture" id=2]
[ext_resource path="res://sprites/tank.png" type="Texture" id=3]
[ext_resource path="res://scenes/health_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/Smoke.png" type="Texture" id=5]
[ext_resource path="res://audio/sfx/tank_shoot.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("tank:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.266667, 0.266667, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Invulnerable"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("tank:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.29 ),
"transitions": PoolRealArray( 0.5, 2.92818, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("tank:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tank:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=6]
min_value = 0.1
_data = [ Vector2( 0, 0.58564 ), 0.0, 0.0, 0, 0, Vector2( 0.513423, 0.36388 ), -0.553162, -0.553162, 0, 0, Vector2( 0.944028, 0.1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.559081, 1 )
colors = PoolColorArray( 0.45098, 0.509804, 0.360784, 1, 0.690196, 0.721569, 0.498039, 1, 0.886275, 0.87451, 0.694118, 1 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.00872367, 0.1392 ), 0.0, 0.0, 0, 0, Vector2( 0.450067, 1 ), 1.09266, 1.09266, 0, 0, Vector2( 0.997719, 0.2558 ), 0.0, 0.0, 0, 0 ]

[node name="base_tank" type="KinematicBody2D" groups=[
"tank",
]]
z_index = -2
collision_mask = 31
script = ExtResource( 1 )
acceleration = 0.5
speed_rev = -40.0
rot_speed = 2.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 0 )
shape = SubResource( 1 )
disabled = true

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="tank" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="ShotTimer" type="Timer" parent="."]

[node name="TankBody" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="EffectAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 3 )
anims/Invulnerable = SubResource( 4 )
anims/Normal = SubResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
position = Vector2( -26, -25 )

[node name="Particles_Track1" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -12, -6 )
rotation = 1.5708
emitting = false
amount = 25
lifetime = 0.3
speed_scale = 0.5
emission_shape = 1
emission_sphere_radius = 2.0
spread = 10.0
initial_velocity = 0.25
angle_random = 0.5
scale_amount = 2.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Particles_Track2" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -12, 6 )
rotation = 1.5708
emitting = false
amount = 25
lifetime = 0.3
speed_scale = 0.5
emission_shape = 1
emission_sphere_radius = 2.0
spread = 10.0
initial_velocity = 0.25
angle_random = 0.5
scale_amount = 2.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Particles_Killed" type="CPUParticles2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.309
emitting = false
amount = 25
speed_scale = 0.3
explosiveness = 0.05
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 3, 2.5 )
spread = 100.0
angle = -15.0
scale_amount = 1.5
scale_amount_curve = SubResource( 8 )

[node name="AudioEngine" type="AudioStreamPlayer" parent="."]

[node name="AudioShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
[connection signal="health_updated" from="." to="HealthBar" method="_on_base_tank_health_updated"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerableTimer_timeout"]
